# cmake-transitive-object-library-link-issue

./: CMakeLists.txt  README.md  a.c  a.h  b.c  b.h  main.c
